--- a/src/css/main.css
+++ b/src/css/main.css
@@ -74,6 +74,7 @@ header {
     background-color: var(--grey-floating-panel);
     height: 100%;
     width: 300px;
+    min-width: 300px;
     margin: 0px 20px 0px 50px;
     font-weight: 700;
 }
