--- a/src/css/main.css
+++ b/src/css/main.css
@@ -707,6 +707,32 @@ header {
 
 
 
+
+
+
+
+.loader {
+    margin-left: 5px;
+    display: inline-block;
+    border: 3px solid white;
+    border-top: 2px solid transparent;
+    border-radius: 100px;
+    width: 25px;
+    height: 25px;
+	-webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+}
+  
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
 .auth-error {
     font-weight: 400;
     font-size: 0.9rem;
