--- a/src/css/main.css
+++ b/src/css/main.css
@@ -733,6 +733,13 @@ header {
 	100% { transform: rotate(360deg); }
 }
 
+
+
+
+.error {
+    color: var(--red) !important;
+}
+
 .auth-error {
     font-weight: 400;
     font-size: 0.9rem;
