--- a/src/css/main.css
+++ b/src/css/main.css
@@ -298,7 +298,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: Calc(100vh - 300px);
 }
 
 .home-logo {
@@ -535,7 +535,18 @@ header {
 
 .tweet-image img, .collection-tweet-image img {
     width: 100%;
-    /* display: none; */
+    width: 648px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 20px;
+    border: 1px solid var(--grey-floating-panel);
+}
+
+.tweet-image video, .collection-tweet-image video {
+    width: 100%;
+    width: 648px;
+    height: 400px;
+    object-fit: cover;
     border-radius: 20px;
     border: 1px solid var(--grey-floating-panel);
 }
@@ -738,6 +749,10 @@ header {
 
 .error {
     color: var(--red) !important;
+    font-weight: 400;
+    font-size: 0.9rem;
+    margin-top: -15px;
+    margin-bottom: 20px;
 }
 
 .auth-error {
