--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,6 +30,11 @@ body {
     background-color: var(--bg);
 }
 
+*[data-selected="true"] {
+    color: var(--blue);
+    border-bottom: 1px solid var(--blue);
+}
+
 input[type="search"], input[type="text"], input[type="password"] {
     font-family: inherit;
     -webkit-appearance: none;
@@ -86,6 +91,11 @@ header {
     border-bottom: 1px solid var(--grey-inputbg);
 }
 
+.side-nav-item[data-selected ="true"]{
+    color: var(--blue);
+    border-bottom: 1px solid var(--blue);
+}
+
 .side-nav-item:last-child {
     border-bottom: 0px;
 }
@@ -109,6 +119,10 @@ header {
 .side-nav-item > svg {
     margin-right: 15px;
     fill: white;
+}
+
+.side-nav-item[data-selected="true"] > svg {
+    fill: var(--blue);
 }
 
 .about {
@@ -283,6 +297,7 @@ header {
 
 
 .center-container {
+    width: 740px;
     margin: 0px 20px;
     display: flex;
     flex-grow: 1;
@@ -409,6 +424,11 @@ header {
     align-items: center;
     justify-content: center;
     height: 100vh;
+}
+
+.collections-page {
+    width: 740px;
+    justify-content: flex-start;
 }
 
 .timeline-header {
@@ -551,6 +571,10 @@ header {
     border: 1px solid var(--grey-floating-panel);
 }
 
+.tweet-footer {
+    width: 648px;
+}
+
 .tweet-footer, .collection-tweet-footer {
     font-size: 0.9rem;
     display: flex;
@@ -562,6 +586,10 @@ header {
     display: flex;
     justify-content: space-between;
     color: var(--grey-font);
+}
+
+.tweet-metrics p {
+    margin-right: 15px;
 }
 
 .save-to-collection, .remove-from-collection {
@@ -582,38 +610,50 @@ header {
 .save-to-collection svg, .remove-from-collection svg {
     fill: var(--blue-label);
     margin-right: 10px;
+    width: 18px;
+    height: 18px;
 }
 
 
 .save-to-collection-prompt {
+    position: absolute;
+    z-index: 20;
+    width: 350px;
+    height: 400px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    cursor: default;
-    position: absolute;
-    color: white;
-    width: 120%;
-    height: 130px;
-    height: 150px;
     overflow: auto;
-    background-color: var(--grey-floating-panel);
-    transform: translate(-43px, -97px);
-    border-radius: 10px;
+    background-color: var(--grey-inputbg);
+    border-radius: 15px;
+    box-shadow: rgba(4, 74, 111, 0.7) 0px 0px 20px -5px;
+    border: 1px solid var(--grey-font);
 }
 
-.save-to-collection-prompt div:last-child {
-    border-bottom: 1px solid transparent;
+.save-to-collection-header {
+    background-color: var(--grey-floating-panel);
+    width: 350px;
+    width: 100%;
+    color: white;
+    font-weight: 700;
+    font-size: 1.5rem;
+    padding: 30px 0px 30px 40px;
 }
 
 .save-to-collection-item {
-    text-align: center;
     cursor: pointer;
+    display: flex;
     width: 100%;
-    padding: 10px 10px;
-    border-bottom: 1px solid var(--grey-inputbg);
+    height: 100px;
+    padding: 20px 0px 20px 40px;
+    border-bottom: 1px solid var(--grey-floating-panel);
+}
+
+.save-to-collection-item:last-child {
+    border-bottom: 1px solid transparent;
 }
 
 .save-to-collection-item:hover {
+    color: var(--blue-label);
     background-color: var(--grey-floating-panel-hover);
 }
 
@@ -656,6 +696,8 @@ header {
 }
 
 .collection-item {
+    display: flex;
+    align-items: center;
     cursor: pointer;
     padding: 10px 20px;
     background-color: var(--grey-floating-panel);
@@ -670,6 +712,7 @@ header {
 }
 
 .collection-item[data-selected="true"] {
+    color: var(--blue);
     border-bottom: 1px solid var(--blue);
 }
 
