--- a/src/css/main.css
+++ b/src/css/main.css
@@ -46,6 +46,8 @@ input[type="search"], input[type="text"], input[type="password"] {
 
 button {
     font-family: inherit;
+    font-size: 1rem;
+    color: white;
     display: flex;
     align-items: center;
 	justify-content: space-around;
@@ -60,6 +62,10 @@ button {
 	transition-timing-function: ease;
 	transition-delay: 0.05s;
 	opacity: 1;
+}
+
+button:hover, button:active {
+    opacity: 0.8;
 }
 
 header {
@@ -687,6 +693,50 @@ header {
 .collection-count {
     align-self: flex-start;
 }
+
+.create-collection-cta {
+    color: var(--blue);
+    border-radius: 0;
+    background-color: var(--grey-floating-panel-hover);
+    fill: var(--blue);
+    width: 250px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-self: flex-start;
+}
+
+.create-collection-input-div {
+    align-self: flex-start;
+    display: flex;
+    align-items: center;
+}
+
+.create-collection-input {
+    padding: 7px 20px;
+    font-size: 1rem;
+    color: white;
+    width: 400px;
+    border-radius: 30px;
+    margin-right: 20px;
+    background-color: var(--grey-inputbg);
+}
+
+.create-collection-input:focus,  .create-collection-input:active, .create-collection-input:hover {
+    border: 1px solid var(--blue);
+    background-color: var(--bg);
+    box-shadow: rgba(4, 74, 111, 1) 0px 0px 30px -10px;
+}
+
+.create-collection-input::placeholder {
+    color: var(--grey-font);
+}
+
+.create-collection-close {
+    position: relative;
+    margin-left: 15px;
+}
+
+
 
 .collections-list {
     align-self: flex-start;
