--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,7 +6,6 @@ html {
     
 *, *:before, *:after {
     box-sizing: inherit;
-
 }
 
 :root {
@@ -22,6 +21,7 @@ html {
 }
 
 body {
+    touch-action: manipulation;
     color: white;
     margin: 0px;
     padding: 0px;
@@ -650,7 +650,7 @@ header {
     cursor: pointer;
     display: flex;
     width: 100%;
-    height: 100px;
+    /* height: 100px; */
     padding: 20px 0px 20px 40px;
     border-bottom: 1px solid var(--grey-floating-panel);
 }
@@ -659,7 +659,7 @@ header {
     border-bottom: 1px solid transparent;
 }
 
-.save-to-collection-item:hover {
+.save-to-collection-item:hover, .save-to-collection-item:active {
     color: var(--blue-label);
     background-color: var(--grey-floating-panel-hover);
 }
