feat: adds nav navigation function for main and timeline search pages

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -148,6 +148,7 @@ header {
     cursor: pointer;
     padding: 20px;
     border-bottom: 1px solid var(--grey-inputbg);
+    transition: 0.3s;
 }
 
 .side-nav-item[data-selected ="true"]{
