--- a/src/css/main.css
+++ b/src/css/main.css
@@ -121,6 +121,20 @@ button:hover, button:active {
     opacity: 0.8;
 }
 
+
+.modal {
+    z-index: 20;
+    position: absolute;
+    left: 0; 
+    right: 0; 
+    width: 500px;
+    height: 500px;
+    top: 0px;
+    bottom: 0;
+    margin: auto;
+    box-shadow: rgba(4, 74, 111, 0.8) 0px 0px 20px -5px;
+}
+
 header {
     height: 50px;
     display: flex;
@@ -189,27 +203,31 @@ header {
     position: relative;
 }
 
-.about-text {
-    position: absolute;
+.about-modal {
+    position: relative;
+    width: 300px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 15px;
+    justify-content: center;
     background-color: var(--grey-inputbg);
-    width: 100%;
-    transform: translate(-20px, 150px);
+    background-color: var(--bg);
     padding: 50px 20px;
     cursor: default;
-    box-shadow: rgba(4, 74, 111, 0.4) 0px 0px 20px -5px;
+    box-shadow: rgba(4, 74, 111, 0.8) 0px 0px 20px -5px;
+    border: 1px solid var(--blue);
 }
 
 .about-header {
+    font-weight: 700;
+    font-size: 1.5rem;
     margin-bottom: 30px;
 }
 
-.about-body {
+.about-text {
     font-weight: 400;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 
 .user-profile {
@@ -219,19 +237,8 @@ header {
     border-bottom-right-radius: 15px;
 }
 
-.modal {
-    z-index: 20;
-    position: absolute;
-    left: 0; 
-    right: 0; 
-    width: 500px;
-    height: 500px;
-    top: 0px;
-    bottom: 0;
-    margin: auto;
-}
-
 .user-auth-div {
+    z-index: 20;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -244,6 +251,22 @@ header {
     cursor: default;
     box-shadow: rgba(4, 74, 111, 0.4) 0px 0px 20px -5px;
     margin-left: 20px;
+}
+
+.user-auth-div-modal {
+    position: flex;
+    justify-content: center;
+    left: 0;
+    right: 0px;
+    bottom: 0px;
+    top: 0px;
+    width: 600px;
+    height: 550px;height: 700px;
+
+    margin: auto;
+
+    box-shadow: rgba(4, 74, 111, 0.8) 0px 0px 20px -5px;
+
 }
 
 .login-div, .signup-div {
