--- a/src/css/main.css
+++ b/src/css/main.css
@@ -706,6 +706,11 @@ header {
     padding: 30px 0px 30px 40px;
 }
 
+.collection-login-prompt {
+    text-align: center;
+    margin-top: 20px;
+}
+
 .save-to-collection-item {
     cursor: pointer;
     display: flex;
