change: removes replying to element from tweets
to be worked on later

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -298,7 +298,7 @@ header {
 }
 
 .user-auth-div-modal {
-    position: flex;
+    display: flex;
     justify-content: center;
     left: 0;
     right: 0px;
