feat: adds saved tweet indicator

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,6 +32,7 @@ body {
 }
 
 a, a:visited {
+    cursor: pointer;
     color: var(--blue-label);
     text-decoration: none;
     transition: 0.2s;
