feat: adds function to change header text to selected sidenav item

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -184,6 +184,14 @@ header {
     height: 50px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid var(--grey-inputbg);
+}
+
+.header-text {
+    font-weight: 700;
+    transform: translateX(-140px);
 }
 
 .main-container {
