--- a/src/css/main.css
+++ b/src/css/main.css
@@ -454,6 +454,7 @@ header {
     margin: 0px 20px;
     display: flex;
     flex-grow: 1;
+    flex-shrink: 0;
     flex-direction: column;
     align-items: center;
 
@@ -917,6 +918,61 @@ header {
 
 
 
+.spotlight-container {
+    font-size: 0.9rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 50px 50px 0px 20px;
+    border-radius: 15px;
+    background-color: var(--grey-floating-panel);
+    height: 100%;
+    height: 350px;
+    width: 350px;
+    min-width: 300px;
+
+    padding: 20px;
+}
+
+.spotlight-header {
+    font-weight: 700;
+    display: flex;
+}
+
+.light-bulb {
+    fill: var(--blue);
+}
+
+.spotlight-body {
+    margin-top: 40px;
+}
+
+
+footer {
+    padding-top: 10px;
+    color: #969696;
+    text-align: center;
+    /* text-align: right; */
+    position: fixed;
+    font-size: 0.7rem;
+    bottom: 0px;
+    padding-bottom: 0px;
+    /* padding-right: 10px; */
+    width: 100vw;
+    background-color: var(--bg);
+}
+
+footer .big-footer {
+   margin: 0;
+   padding: 0;
+   white-space: pre;
+}
+
+.made-by-mobile {
+    display: none;
+}
+
+
 
 
 
@@ -944,7 +1000,9 @@ header {
 }
 
 
-
+.small {
+    font-size: 0.6rem;
+}
 
 .error {
     color: var(--red) !important;
