--- a/src/css/main.css
+++ b/src/css/main.css
@@ -216,7 +216,7 @@ header {
     border-radius: 15px;
     background-color: var(--grey-floating-panel);
     height: 100%;
-    width: 300px;
+    width: 350px;
     min-width: 300px;
     margin: 50px 20px 0px 50px;
     font-weight: 700;
@@ -462,7 +462,7 @@ header {
 .center-container {
     width: 740px;
     margin: 0px 20px;
-    display: flex;
+    /* display: flex; */
     flex-grow: 1;
     flex-shrink: 0;
     flex-direction: column;
@@ -478,7 +478,8 @@ header {
     align-items: center;
     /* justify-content: center; */
     /* height: Calc(100vh - 300px); */
-    margin-top: 200px;
+    padding-top: 200px;
+    height: Calc(100vh - 50px);
 }
 
 .home-logo {
@@ -553,12 +554,12 @@ header {
 }
 
 .timeline-search-page, .collections-page {
-    margin-top: 50px;
+    padding-top: 50px;
     /* display: flex; */
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* height: Calc(100vh - 50px); */
 }
 
 .timeline-search-page {
@@ -567,7 +568,7 @@ header {
     align-items: center;
     justify-content: flex-start;
     /* height: 100vh; */
-    margin-top: 200px;
+    padding-top: 200px;
 }
 
 .collections-page {
@@ -610,6 +611,7 @@ header {
 
 
 .search-results, .collection-results {
+    padding-top: 50px;
     width: 740px;
     display: flex;
     flex-direction: column;
