--- a/src/css/main.css
+++ b/src/css/main.css
@@ -159,13 +159,26 @@ button:hover, button:active {
 }
 
 .media-modal {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    flex-direction: column;
     padding-top: 100px;
     overflow: auto;
     margin: auto;
     display: block;
     width: 80%;
     max-width: 700px;
+    /* max-width: 70vw; */
+    max-height: 80vh;
+    object-fit: contain;
     box-shadow: rgba(4, 74, 111, 0) 0px 0px 20px -5px;
+
+    /* background-image: url("https://pbs.twimg.com/media/EhYqtxMXsAEIwLz?format=jpg&name=large"); */
+
+    background-size: contain;
+    background-repeat:no-repeat;
+    background-position: center;
 }
 
 .screen-fade {
