--- a/src/css/main.css
+++ b/src/css/main.css
@@ -153,7 +153,7 @@ button:hover, button:active {
     /* width: 500px;
     height: 500px; */
     top: 0px;
-    bottom: 0;
+    bottom: 0px;
     margin: auto;
     box-shadow: rgba(4, 74, 111, 0.8) 0px 0px 20px -5px;
 }
@@ -1172,6 +1172,16 @@ footer .big-footer {
 
     .user-profile {
         background-color: unset;
+    }
+
+    .about-modal {
+        position: fixed;
+        /* position: absolute; */
+        padding: 20px;
+    }
+
+    /* TODO: STYLE BG */
+    .about-modal-bg {
     }
 
     .center-container,
